--- a/pages/index.css
+++ b/pages/index.css
@@ -2,4 +2,5 @@
 @import url(../vendor/fonts/inter.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/profile/profile.css);
 @import url(../blocks/footer/footer.css);
