--- a/pages/index.css
+++ b/pages/index.css
@@ -3,4 +3,5 @@
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/elements/elements.css);
 @import url(../blocks/footer/footer.css);
