--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -1,16 +1,21 @@
 .modal__close-button {
+  background-image: url(../../../images/close-icon.svg);
+  background-color: transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  height: 30px;
+  padding: 0px;
   position: absolute;
   top: -40px;
   right: -40px;
-  background: url(../../../images/close-icon.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  border: none;
-  max-width: 40px;
-  height: 40px;
-  width: 100%;
-  padding: 0;
+  height: 30px;
+  width: 30px;
+}
+
+.modal__close-button:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 1020px) {
