--- a/blocks/modal/__form-control/modal__form-control.css
+++ b/blocks/modal/__form-control/modal__form-control.css
@@ -1,20 +1,21 @@
 .modal__form-control {
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   color: #000000;
-  margin: 0 0 30px;
-  padding: 0 0 13px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  padding: 0px 0px 13px;
+  width: 358px;
 }
 
-.modal__form-contro:last-of-type {
+.modal__form-control:last-of-type {
   margin-bottom: 48px;
 }
 
 @media screen and (max-width: 1020px) {
-  .modal__form-contro:last-of-type {
+  .modal__form-control {
     margin-bottom: 45px;
+    width: 238px;
   }
 }
