--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -7,23 +7,12 @@
 
 .modal {
   position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal::after {
-  content: "";
-  position: absolute;
-  background: #000000;
-  opacity: 0.5;
+  left: 0px;
+  top: 0px;
+  height: 100vh;
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
+  align-items: center;
+  justify-content: center;
 }
