fix: update modal styles

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -11,7 +11,7 @@
   display: none;
   left: 0px;
   top: 0px;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   align-items: center;
   justify-content: center;
