--- a/blocks/modal/__form-control/modal__form-control.css
+++ b/blocks/modal/__form-control/modal__form-control.css
@@ -5,11 +5,13 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
-  padding: 0px 0px 13px;
+  padding: 0px 0px 13px 0px;
+  margin: 0px 0px 0px 0px;
   width: 358px;
 }
 
 .modal__form-control:last-of-type {
+  padding-top: 30px;
   margin-bottom: 48px;
 }
 
