--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 @import url("./__logo/header__logo.css");
 
 .header {
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
