--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -2,9 +2,9 @@
   background-color: #ffffff;
   border-radius: 10px;
   min-width: 430px;
-  min-height: 330px;
   margin: 0px auto;
   position: relative;
+  padding: 34px 36px 36px 36px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,6 +14,6 @@
 @media screen and (max-width: 1020px) {
   .modal__container {
     min-width: 282px;
-    min-height: 322px;
+    padding: 25px 22px 25px 22px;
   }
 }
