fix: rename all images

--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -14,7 +14,7 @@
 }
 
 .elements__like:focus {
-  background: url("../../../images/like-enabled.svg");
+  background: url("../../../images/likeenabled.svg");
   background-repeat: no-repeat;
   outline: 0;
 }
