--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -1,5 +1,5 @@
 .modal__close-button {
-  background-image: url(../../../images/close-icon.svg);
+  background-image: url(../../../images/closeicon.svg);
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
