--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,5 +1,5 @@
 .profile__add {
-  background-image: url("../../../images/add-button.svg");
+  background-image: url("../../../images/addbutton.svg");
   background-color: transparent;
   background-size: 22px 22px;
   background-repeat: no-repeat;
