--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,5 +1,5 @@
 .profile__edit {
-  background: url(../../../images/edit-button.svg);
+  background: url(../../../images/editbutton.svg);
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
