--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -10,11 +10,13 @@
   top: -40px;
   right: -40px;
   height: 30px;
+  transition-duration: 0.5s;
   width: 30px;
 }
 
 .modal__close-button:hover {
   opacity: 0.6;
+  transform: rotate(45deg);
 }
 
 @media screen and (max-width: 1020px) {
