--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -3,4 +3,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0px auto 0px auto;
+  max-width: 358px;
+}
+
+@media screen and (max-width: 425px) {
+  .popup__form {
+    width: calc(100% - 44px);
+  }
 }
