--- a/blocks/modal/__form-control/modal__form-control.css
+++ b/blocks/modal/__form-control/modal__form-control.css
@@ -6,18 +6,22 @@
   font-weight: 400;
   line-height: 17px;
   padding: 0px 0px 13px 0px;
-  margin: 0px 0px 0px 0px;
+  margin: 0px 0px 30px 0px;
   width: 358px;
 }
 
 .modal__form-control:last-of-type {
-  padding-top: 30px;
   margin-bottom: 48px;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 425px) {
   .modal__form-control {
-    margin-bottom: 45px;
     width: 238px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .modal__form-control:last-of-type {
+    margin-bottom: 45px;
   }
 }
