--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -3,17 +3,17 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
+  margin: 34px 0 0 0px;
+  padding: 0px 0px 54px 0px;
   width: 358px;
-  margin-top: 0;
-  margin-bottom: 54px;
-  text-align: left;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 425px) {
   .modal__title {
     font-size: 18px;
-    line-height: 22px;
+    line-height: 21.78px;
     width: 238px;
-    margin-bottom: 75px;
+    margin-top: 25px;
+    padding-bottom: 75px;
   }
 }
