--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,8 +2,11 @@
   font-family: "Inter", Arial, sans-serif;
   background-color: #000000;
   box-sizing: border-box;
-  margin: 0px auto 0px auto;
+  margin: auto;
   min-width: 320px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
