fix: profile edit button

--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   border: 1px solid #ffffff;
   cursor: pointer;
+  display: flex;
   height: 24px;
   padding: 0px 0px 0px 0px;
   max-width: 24px;
