refactor: render images with JS

--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -1,10 +1,19 @@
 .elements__container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(282px, 1fr)); */
+  grid-template-columns: repeat(3, 282px);
   row-gap: 20px;
   column-gap: 17px;
   list-style: none;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
   width: 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+@media screen and (max-width: 1024px) {
+  .elements__container {
+    grid-template-columns: repeat(auto-fit, 282px);
+  }
 }
