--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,3 +1,4 @@
+@import url("./_type/modal_type_image.css");
 @import url("./__container/modal__container.css");
 @import url("./__title/modal__title.css");
 @import url("./__form/modal__form.css");
