--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,7 +1,8 @@
-@import url("./_type/modal_type_image.css");
 @import url("./__container/modal__container.css");
+@import url("./__container/_preview/modal__container_preview.css");
 @import url("./__title/modal__title.css");
 @import url("./__form/modal__form.css");
+@import url("./__image/modal__image.css");
 @import url("./__form-control/modal__form-control.css");
 @import url("./__form-submit/modal__form-submit.css");
 @import url("./__close-button/modal__close-button.css");
@@ -9,7 +10,10 @@
 .modal {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none;
+  /* display: none; */
+  visibility: hidden;
+  opacity: 0;
+  transition: visiblity 0s linear 0.5s, opacity 0.5s linear;
   left: 0px;
   top: 0px;
   height: 100%;
