--- a/blocks/elements/__like/_active/elements__like_active.css
+++ b/blocks/elements/__like/_active/elements__like_active.css
@@ -1,5 +1,3 @@
 .elements__like_active {
-  background: url("../../../images/likeenabled.svg");
-  background-repeat: no-repeat;
-  outline: 0;
+  background: url("../../../../images/likeenabled.svg");
 }
