--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -6,6 +6,8 @@
 @import url("./__form-control/modal__form-control.css");
 @import url("./__form-submit/modal__form-submit.css");
 @import url("./__close-button/modal__close-button.css");
+@import url("./__close-button/_preview/modal__close-button_preview.css");
+@import url("./__image-title/modal__image-title.css");
 
 .modal {
   position: fixed;
