fix preview image close button

--- a/blocks/modal/_type/modal_type_image.css
+++ b/blocks/modal/_type/modal_type_image.css
@@ -1,5 +1,5 @@
 .modal_type_image {
-  background-color: black;
+  background-color: transparent;
   display: flex;
   /*display: none;*/
   visibility: hidden;
