--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,7 +1,7 @@
 .elements__image {
   border-radius: 10px 10px 0px 0px;
+  width: 282px;
   height: 282px;
   min-height: 282px;
-  object-fit: cover;
-  width: 100%;
+  min-width: 282px;
 }
