--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -4,10 +4,13 @@
 @import url("./__form/modal__form.css");
 @import url("./__image/modal__image.css");
 @import url("./__form-control/modal__form-control.css");
+@import url("./__form-control/_error/modal__form-control_error.css");
+@import url("./__form-submit/_disabled/modal__form-submit_disabled.css");
 @import url("./__form-submit/modal__form-submit.css");
 @import url("./__close-button/modal__close-button.css");
 @import url("./__close-button/_preview/modal__close-button_preview.css");
 @import url("./__image-title/modal__image-title.css");
+@import url("./__error/modal__error.css");
 
 .modal {
   position: fixed;
