--- a/blocks/modal/__form-control/modal__form-control.css
+++ b/blocks/modal/__form-control/modal__form-control.css
@@ -6,12 +6,12 @@
   font-weight: 400;
   line-height: 17px;
   padding: 0px 0px 13px 0px;
-  margin: 0px 0px 30px 0px;
+  margin: 0px 0px 0px 0px;
   width: 358px;
 }
 
 .modal__form-control:last-of-type {
-  margin-bottom: 48px;
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 425px) {
