--- a/blocks/modal/__form-submit/_disabled/modal__form-submit_disabled.css
+++ b/blocks/modal/__form-submit/_disabled/modal__form-submit_disabled.css
@@ -1,9 +1,4 @@
 .modal__form-submit_disabled {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.modal__form-submit_disabled:hover {
-  opacity: 0.2;
-  cursor: none;
+  background-color: #e5e5e5;
+  color: #ffffff;
 }
