--- a/src/blocks/modal/__container/modal__container.css
+++ b/src/blocks/modal/__container/modal__container.css
@@ -1,3 +1,6 @@
+@import url("./_type/modal__container_type_avatar.css");
+@import url("./_type/modal__container_type_delete.css");
+
 .modal__container {
   background-color: #ffffff;
   border-radius: 10px;
