--- a/src/blocks/modal/__title/modal__title.css
+++ b/src/blocks/modal/__title/modal__title.css
@@ -1,3 +1,6 @@
+@import url("./_type/modal__title_type_avatar.css");
+@import url("./_type/modal__title_type_delete.css");
+
 .modal__title {
   color: #000000;
   font-size: 24px;
