--- a/src/blocks/elements/__like/elements__like.css
+++ b/src/blocks/elements/__like/elements__like.css
@@ -3,7 +3,8 @@
   background-image: url("../../../images/like.svg");
   background-color: transparent;
   background-repeat: no-repeat;
-  padding: 0px 0px 0px 0px;
+  margin: 0;
+  padding: 0px 0px 3px 0px;
   height: 19px;
   width: 21px;
 }
