--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,3 +9,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/_opened/modal_opened.css);
+@import url(../blocks/elements/__delete-button/_visible/elements__delete-button_visible.css);
