--- a/src/blocks/elements/__like-counter/elements__like-counter.css
+++ b/src/blocks/elements/__like-counter/elements__like-counter.css
@@ -3,7 +3,8 @@
   font-size: 13px;
   line-height: 16px;
   font-weight: 400;
-  margin: 0;
+  /* margin: 0; */
+  margin: 3px auto 0;
   padding: 0;
-  text-align: center;
+  /* text-align: center; */
 }
