--- a/src/blocks/elements/__title/elements__title.css
+++ b/src/blocks/elements/__title/elements__title.css
@@ -5,6 +5,7 @@
   line-height: 29px;
   margin: 0px 0px 0px 0px;
   max-width: 220px;
+  /* max-width: calc(100% - 21px); */
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
