--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/elements/__like-counter/elements__like-counter.css);
+@import url(../blocks/elements/__like-container/elements__like-container.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/_opened/modal_opened.css);
