Update styles for avatar

--- a/src/blocks/modal/__container/modal__container.css
+++ b/src/blocks/modal/__container/modal__container.css
@@ -1,5 +1,5 @@
-@import url("./_type/modal__container_type_avatar.css");
-@import url("./_type/modal__container_type_delete.css");
+/* @import url("./_type/modal__container_type_avatar.css");
+@import url("./_type/modal__container_type_delete.css"); */
 
 .modal__container {
   background-color: #ffffff;
