--- a/src/blocks/modal/__form-submit/modal__form-submit.css
+++ b/src/blocks/modal/__form-submit/modal__form-submit.css
@@ -8,8 +8,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  margin-top: 31px;
-  margin-bottom: 36px;
+  margin: 18px auto 37px;
   padding: 0px 0px 0px 0px;
 }
 
