--- a/src/blocks/modal/__error/modal__error.css
+++ b/src/blocks/modal/__error/modal__error.css
@@ -1,11 +1,13 @@
 .modal__error {
+  display: flex;
   align-self: flex-start;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.25;
   color: #ff0000;
-  padding-top: 0px;
-  margin-top: 5px;
+  margin: 0;
+  position: relative;
+  top: -20px;
   max-width: 240px;
 }
 
