--- a/src/blocks/profile/__image-edit/profile__image-edit.css
+++ b/src/blocks/profile/__image-edit/profile__image-edit.css
@@ -1,15 +1,22 @@
 .profile__image-edit {
-  position: absolute;
+  background: transparent;
+  border-radius: 50%;
+  border: none;
   width: 120px;
   height: 120px;
+  position: absolute;
   cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .profile__image-edit:hover {
-  position: absolute;
   background-image: url("../../../images/edit.svg");
   background-color: rgba(0, 0, 0, 0.8);
-  background-repeat: no-repeat;
   background-size: 26px 26px;
   background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
 }
