--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,12 @@
 .profile__image {
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 50%;
-  margin: 0px 30px 0px 0px;
-  height: 100%;
-  max-height: 120px;
-  max-width: 120px;
-  width: 100%;
-  overflow: hidden;
-  transition: opacity 0.5s linear 0s;
+  height: 120px;
+  margin: 0;
+  padding: 0;
+  width: 120px;
 }
 
 .profile__image:hover + .profile__image-edit {
