--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -6,6 +6,7 @@
 @import url("./__occupation/profile__occupation.css");
 @import url("./__add/profile__add.css");
 @import url("./__image-edit/profile__image-edit.css");
+@import url("./__avatar/profile__avatar.css");
 
 .profile {
   display: flex;
